Replace ConfMaterial with a solution based on MaterialRef